...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_kk_name"
                android:hint="@string/patriarch_name"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_kk_num"
                android:hint="@string/patriarch_card_number"
                android:inputType="number"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_nik"
                android:hint="@string/nik"
                android:inputType="number"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_name"
                android:hint="@string/full_name"
                style="@style/AppTheme.StepView.EditText"
...

        <LinearLayout
            android:id="@+id/ll_sex"
            android:orientation="horizontal"
            android:gravity="center_vertical"
...

            <RadioGroup
                android:id="@+id/rg_sex"
                android:orientation="horizontal"
                style="@style/AppTheme.StepView.RadioGroup">
...

                <RadioButton
                    android:id="@+id/rg_sex_rb_female"
                    android:text="@string/female"
                    style="@style/AppTheme.StepView.RadioButton"/>
...

        <LinearLayout
            android:id="@+id/ll_born_place"
            android:orientation="horizontal"
            android:gravity="center_vertical"
...

            <RadioGroup
                android:id="@+id/rg_born_place"
                android:orientation="vertical"
                android:layout_width="0dp"
...

                <RadioButton
                    android:id="@+id/rg_born_place_rs"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_location"
                android:hint="@string/born_location"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_day"
                android:hint="@string/born_day"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_date"
                android:hint="@string/born_date"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_time"
                android:hint="@string/born_time"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_age"
                android:hint="@string/age"
                android:inputType="number"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_job"
                android:hint="@string/job"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_address"
                android:hint="@string/address_street_detail"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_village"
                android:hint="@string/address_village_detail"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_subdistrict"
                android:hint="@string/address_subdistrict_detail"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_district"
                android:hint="@string/address_district_detail"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_state"
                android:hint="@string/address_state_detail"
                style="@style/AppTheme.StepView.EditText"
...

        <LinearLayout
            android:id="@+id/ll_nationality"
            android:orientation="horizontal"
            android:gravity="center_vertical"
...

            <RadioGroup
                android:id="@+id/rg_nationality"
                android:orientation="horizontal"
                style="@style/AppTheme.StepView.RadioGroup">
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_ethnic"
                android:hint="@string/ethnic_group"
                style="@style/AppTheme.StepView.EditText"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_married_date"
                android:hint="@string/married_date"
                style="@style/AppTheme.StepView.EditText"
...

        <LinearLayout
            android:id="@+id/ll_born_type"
            android:orientation="horizontal"
            android:gravity="center_vertical"
...

            <RadioGroup
                android:id="@+id/rg_born_type"
                android:orientation="vertical"
                style="@style/AppTheme.StepView.RadioGroup">

                <RadioButton
                    android:id="@+id/rg_born_type_single"
                    android:text="@string/single"
                    style="@style/AppTheme.StepView.RadioButton"/>
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_born_seq"
                android:hint="@string/born_seq"
                android:inputType="number"
...

        <LinearLayout
            android:id="@+id/ll_born_helper"
            android:orientation="horizontal"
            android:gravity="center_vertical"
...

            <RadioGroup
                android:id="@+id/rg_born_helper"
                android:orientation="vertical"
                style="@style/AppTheme.StepView.RadioGroup">

                <RadioButton
                    android:id="@+id/rg_born_helper_docter"
                    android:text="@string/docter"
                    style="@style/AppTheme.StepView.RadioButton"/>
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_baby_weight"
                android:hint="@string/baby_weight"
                android:inputType="number"
...

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/acet_baby_height"
                android:hint="@string/baby_height"
                android:inputType="number"
...
