<?xml version="1.0" encoding="utf-8"?>
<com.stepstone.stepper.StepperLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stepperLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:ms_stepperType="tabs"
    app:ms_activeStepColor="?attr/colorAccent"
    app:ms_inactiveStepColor="#cccccc"
    app:ms_backButtonColor="#FFFFFF"
    app:ms_nextButtonColor="#FFFFFF"
    app:ms_completeButtonColor="#FFFFFF"
    app:ms_tabStepDividerWidth="138dp"
    app:ms_bottomNavigationBackground="?attr/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_certificateofbirthdatasetdetail"/>